# cv-logistics-mlops

./: .gitignore  BENCHMARKS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: duckdb_config.yaml  mlflow_config.yaml
results/: history.json
scripts/: generate_benchmarks_md.py  promote_best_model.py  register_task.ps1  run_benchmarks.py  weekly_pipeline.py  weekly_task.ps1
sql_queries/: best_models.sql  custom_queries.sql  experiments_analysis.sql  export_to_duckdb.py  hyperparams_analysis.sql  run_comparison.sql
src/clean_data/: run.py
src/download_data/: run.py
src/model_deployment/: app.py
src/model_training/: run.py  train.py
src/utils/: dataset.py  model.py
sweeps/: sweep.py  sweep_config.yaml  train_sweep.py
tests/: test_pipeline.py
