[project]
name = "cv-logistics-mlops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.45",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "uvicorn>=0.51.0",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
